--- a/_includes/css/modules.css
+++ b/_includes/css/modules.css
@@ -1017,7 +1017,7 @@ button,
   background-color: var(--color-primary);
   border-radius: 50px;
   border: 3px solid var(--color-primary);
-  color: #fff;
+  color: var(--color-secondary);
   font: inherit;
   text-decoration: none;
   text-transform: none;
