--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,16 +8,19 @@
     <li class="{{include.liClass}}">
       <ul class="{{include.ulInner}}">
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/">About</a>
+          <a class="{{include.aInner}}" href="{{site.baseurl}}/about/">About</a>
         </li>
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/">Volunteer</a>
+          <a class="{{include.aInner}}" href="{{site.baseurl}}/volunteer/">Volunteer</a>
         </li>
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/">News & Events</a>
+          <a class="{{include.aInner}}" href="{{site.baseurl}}/news/">News & Events</a>
         </li>
-        <li class="{{include.liInner}}">
-          <a class="{{include.aBtn}} btn" href="{{site.baseurl}}/">Donate</a>
+        <li class="{{include.liInner}} {{include.liHours}}">
+          <a class="{{include.aInner}}" href="{{site.baseurl}}/#hours">Store Hours</a>
+        </li>
+        <li class="{{include.liInner}} {{include.liBtn}}">
+          <a class="{{include.aBtn}} btn" href="{{site.baseurl}}/donate/">Donate</a>
         </li>
       </ul>
     </li>
