--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="masthead sticky">
-  {% include nav.html navClass='nav wrapper gutter pad-t-1-2 pad-b-1-2' ulClass='list-group push-0' ulInner='nav-items list-group push-0' aLogo='inline-block' aInner='block line-hover' %}
+  {% include nav.html navClass='nav wrapper gutter pad-t-1-2 pad-b-1-2' ulClass='list-group push-0' ulInner='nav-items list-group push-0' aLogo='inline-block' aInner='block line-hover' liHours='hidden' %}
   <a class="tog-nav m-0" href="#nav-footer">
     <span class="tog tog-top"></span>
     <span class="tog tog-middle"></span>
@@ -11,6 +11,16 @@ layout: default
   </a>
 </header>
 {{content}}
-<footer class="footer">
-
+<footer class="footer pad-t-2 pad-b-2">
+  <div class="grid grid-bottom wrapper island-1-2">
+    <div class="unit [ xs-1 m-1-2 ] island-1-2">
+      {% include nav.html ulClass='list-group push-0 milli' aLogo='inline-block push-1-2' liInner='push-1-4' ulInner='list-group push-0' liBtn='hidden' aInner='line-hover line-hover-left' %}
+    </div>
+    <div class="unit [ xs-1 m-1-2 ] island-1-2">
+      <div class="btn-wrap push-1-2">
+        <a class="btn btn-white mega" href="#">Donate</a>
+      </div>
+      {% include contact-info.html ulClass='list-group push-0 milli' liClass='push-1-4' titleSize='mega' aClass='line-hover line-hover-right' %}
+    </div>
+  </div>
 </footer>
