--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,6 @@
 {% include css/grid.css %}
 {% include css/type.css %}
 {% include css/common.css %}
+{% include css/footer.css %}
 {% include css/nav.css %}
 {% include css/nav-tog.css %}
