Build home page and reusable blocks

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -1,6 +1,6 @@
 <ul class="{{include.ulClass}} contact-list">
   <li class="{{include.liClass}}">
-    <strong class="{{include.titleSize}}">The Hub & Rebound</strong>
+    <strong class="{{include.titleSize}} font-alt">The Hub & Rebound</strong>
   </li>
   <li class="{{include.liClass}}">
     <a class="{{include.aClass}}" href="tel:6132565225">
@@ -19,8 +19,8 @@
     </a>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}}" href="https://goo.gl/maps/2viaCeAw5n32" target="_blank">
-      <span class="icon-label push-r-1-2">14 Industrial Dr, Almonte, ON K0A 1A0</span>
+    <a class="{{include.aClass}} no-wrap" href="https://goo.gl/maps/2viaCeAw5n32" target="_blank">
+      <address class="icon-label push-r-1-2">14 Industrial Dr, Almonte, ON K0A 1A0</address>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#location" /></svg>
       </i>
