--- a/_includes/css/grid.css
+++ b/_includes/css/grid.css
@@ -46,6 +46,8 @@
   word-spacing: normal;
   display: inline-block;
   visibility: visible;
+  transition:
+    background-color var(--transition-primary);
 }
 
 .grid-bottom .unit {
