--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Roboto:400,400i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/xqk1pkz.css">
   <!-- <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/> -->
 </head>
-<body class="{{page.pageName}}">
+<body class="{{page.pageClass}}">
   <ul class="skip-links">
-    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#content-start">Jump to main content</a></li>
     <li><a class="skip-to-nav" href="#nav">Jump to navigation</a></li>
   </ul>
   {{content}}
