--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,13 +8,13 @@
     <li class="{{include.liClass}}">
       <ul class="{{include.ulInner}}">
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/about/">About</a>
+          <a class="{{include.aInner}} {% if page.url contains 'about' %}current{% endif %}" href="{{site.baseurl}}/about/">About</a>
         </li>
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/volunteer/">Volunteer</a>
+          <a class="{{include.aInner}} {% if page.url contains 'volunteer' %}current{% endif %}" href="{{site.baseurl}}/volunteer/">Volunteer</a>
         </li>
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}}" href="{{site.baseurl}}/news/">News & Events</a>
+          <a class="{{include.aInner}} {% if page.url contains 'news' %}current{% endif %}" href="{{site.baseurl}}/news/">News & Events</a>
         </li>
         <li class="{{include.liInner}} {{include.liHours}}">
           <a class="{{include.aInner}}" href="{{site.baseurl}}/#hours">Store Hours</a>
