--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,17 +10,19 @@ layout: default
     <span class="tog tog-bottom"></span>
   </a>
 </header>
-{{content}}
+<main id="main" tabindex="0">
+  {{content}}
+</main>
 <footer class="footer pad-t-2 pad-b-2">
   <div class="grid grid-bottom wrapper island-1-2">
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
-      {% include nav.html ulClass='list-group push-0 milli' aLogo='inline-block push-1-2' liInner='push-1-4' ulInner='list-group push-0' liBtn='hidden' aInner='line-hover line-hover-left' %}
+      {% include nav.html ulClass='list-group push-0 milli' aLogo='inline-block push-1-2' liInner='push-1-4' ulInner='list-group push-0' liBtn='hidden' aInner='' %}
     </div>
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
       <div class="btn-wrap push-1-2">
         <a class="btn btn-white mega" href="#">Donate</a>
       </div>
-      {% include contact-info.html ulClass='list-group push-0 milli' liClass='push-1-4' titleSize='mega' aClass='line-hover line-hover-right' %}
+      {% include contact-info.html ulClass='list-group push-0 milli' liClass='push-1-4' titleSize='mega' aClass='' %}
     </div>
   </div>
 </footer>
