--- a/_includes/hours-block.html
+++ b/_includes/hours-block.html
@@ -1,6 +1,6 @@
-<div class="hours-block island bg-lg">
-  <div class="push">
-    <img class="logo" src="{{hours.storeLogo}}" alt="">
+<div class="hours-block island bg-lg content-fill unit-content-distribute">
+  <div class="push-2 content-fill unit-content-center-vertical logo-wrap">
+    <img class="logo" src="{{site.baseurl}}/{{hours.storeLogo}}" alt="">
   </div>
   <div class="push media-flex">
     <div>
