--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -20,7 +20,7 @@ layout: default
     </div>
     <div class="unit [ xs-1 m-1-2 ] island-1-2">
       <div class="btn-wrap push-1-2">
-        <a class="btn btn-white mega" href="#">Donate</a>
+        <a class="btn mega" href="#">Donate</a>
       </div>
       {% include contact-info.html ulClass='list-group push-0 milli' liClass='push-1-4' titleSize='mega' aClass='' %}
     </div>
