--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -16,6 +16,8 @@
   width: 10rem;
   vertical-align: middle;
   display: inline-block;
+  z-index: 10000;
+  position: relative;
 }
 
 .nav .nav-items a:not(.btn) {
@@ -26,11 +28,6 @@
     color var(--transition-primary),
     background-color var(--transition-primary);
 }
-
-.sticky .nav .nav-items a:not(.btn) {
-  color: var(--color-secondary);
-}
-
 
 .line-hover {
   position: relative;
@@ -82,7 +79,7 @@
   .nav .nav-items {
     position: fixed;
     width: 100%;
-    top: 4.881875rem;
+    top: 0;
     height: 0;
     left: 0;
     background-color: var(--color-secondary);
@@ -91,11 +88,17 @@
     text-align: center;
     overflow: hidden;
     transition:
-      height var(--transition-primary);
+      height var(--transition-primary),
+      padding-top var(--transition-primary);
+  }
+
+  .masthead.sticky {
+    background-color: #fff;
   }
 
   .open .nav-items {
-    height: calc(100vh - 4.881875rem);
+    height: 100vh;
+    padding-top: 3.590625rem;
   }
 
   .nav .nav-items li:first-child {
@@ -130,6 +133,10 @@
 }
 
 @media only screen and (min-width: 38em) {
+
+  .sticky .nav .nav-items a:not(.btn) {
+    color: var(--color-secondary);
+  }
 
   .nav .nav-items li {
     display: inline-block;
