--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
           <a class="{{include.aInner}} {% if page.url contains 'volunteer' %}current{% endif %}" href="{{site.baseurl}}/volunteer/">Volunteer</a>
         </li>
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}} {% if page.url contains 'news' %}current{% endif %}" href="{{site.baseurl}}/news/">News & Events</a>
+          <a class="{{include.aInner}} {% if page.url contains 'news' %}current{% endif %}" href="{{site.baseurl}}/news-events/">News & Events</a>
         </li>
         <li class="{{include.liInner}} {{include.liHours}}">
           <a class="{{include.aInner}}" href="{{site.baseurl}}/#hours">Store Hours</a>
