--- a/_includes/hours-block.html
+++ b/_includes/hours-block.html
@@ -2,7 +2,7 @@
   <div class="push-2 content-fill unit-content-center-vertical logo-wrap">
     <img class="logo" src="{{site.baseurl}}/{{hours.storeLogo}}" alt="">
   </div>
-  <div class="push media-flex">
+  <a class="push media-flex" href="{{hours.addressLink}}">
     <div>
       <i class=" media-flex-img icon i-1 push-r-1-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#location" /></svg>
@@ -12,7 +12,7 @@
       <span class="no-wrap">{{hours.storeAddress1}},</span>
       <span class="no-wrap">{{hours.storeAddress2}}</span>
     </address>
-  </div>
+  </a>
   <div class="stretch-rows pad-t-1-2">
     <div class="row">
       <p class="stretch bold push-1-2">Monday:</p>
