--- a/_includes/css/modules.css
+++ b/_includes/css/modules.css
@@ -793,8 +793,10 @@ textarea {
   display: block;
   width: 100%;
 
-  background-color: #fff;
-  border: 2px solid #666;
+  background-color: var(--color-lg-lighter);
+  border: none;
+  /* border: 2px solid var(--color-lg); */
+  border-bottom: 2px solid var(--color-primary);
   border-radius: 0;
 }
 
@@ -842,15 +844,25 @@ select {
   top: .1em;
   width: 1.25rem;
 
-  background-color: #fff;
+  background-color: var(--color-lg-lighter);
   background-size: cover;
-  border: 2px solid #666;
+  border: 2px solid var(--color-primary);
+  border-radius: 5px;
 
   line-height: inherit;
+  transition:
+    transform var(--transition-quick),
+    background-color var(--transition-primary);
+}
+
+[type="checkbox"] + label:active::before {
+  transform: scale(1.3);
 }
 
 [type="checkbox"]:checked + label::before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='256' height='256' viewBox='0 0 256 256'%3E%3Cpath fill='none' stroke='%23000' stroke-miterlimit='10' stroke-width='50' d='M49.9 130.1l50.8 50.7L206.1 75.2'/%3E%3C/svg%3E");
+  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='256' height='256' viewBox='0 0 256 256'%3E%3Cpath fill='none' stroke='%23333' stroke-miterlimit='10' stroke-width='50' d='M49.9 130.1l50.8 50.7L206.1 75.2'/%3E%3C/svg%3E"); */
+  background-color: var(--color-primary);
+  /* border-color: var(--color-primary-light); */
 }
 
 [type="checkbox"]:focus + label::before {
@@ -861,23 +873,31 @@ select {
 [type="radio"] + label::before {
   content: " ";
   display: inline-block;
-  height: 1.8em;
+  height: 1.25em;
   margin-right: .3em;
   position: relative;
   vertical-align: middle;
   top: -.1em;
-  width: 1.8em;
+  width: 1.25em;
 
-  background-color: #fff;
+  background-color: var(--color-lg-lighter);
   background-size: cover;
-  border: 2px solid #666;
+  border: 2px solid var(--color-primary);
   border-radius: 50%;
 
   line-height: inherit;
+  transition:
+  transform var(--transition-quick),
+  background-color var(--transition-primary);
+}
+
+[type="radio"] + label:active::before {
+  transform: scale(1.3);
 }
 
 [type="radio"]:checked + label::before {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='256' height='256' viewBox='0 0 256 256'%3E%3Ccircle cx='128' cy='128' r='70.4'/%3E%3C/svg%3E");
+  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23333' width='256' height='256' viewBox='0 0 256 256'%3E%3Ccircle cx='128' cy='128' r='70.4'/%3E%3C/svg%3E"); */
+  background-color: var(--color-primary);
 }
 
 [type="radio"]:focus + label::before,
@@ -1115,6 +1135,7 @@ select:focus {
   outline-offset: 0;
 }
 
+main[tabindex="0"]:focus,
 section[tabindex="0"]:focus {
   outline: 3px solid rgba(0, 0, 0, 0);
 }
