--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<header class="hero">
+<header class="hero {{include.heroSize}}">
   <div class="wrapper gutter">
     <h1>{{pages.h1Text}}</h1>
     <p class="giga text-fff">{{pages.bylineText}}</p>
