--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -1,4 +1,17 @@
 ---
 layout: main
 ---
+{% if page.heroImage %}
+  {% include hero-news.html heroClass='page.heroClass' %}
+{% else %}
+  <header class="header-basic">
+    <div class="max-length gutter">
+      <h1 class="">{{page.title}}</h1>
+      {% if page.byline %}
+        <p class="byline mega">{{page.byline}}</p>
+      {% endif %}
+    </div>
+  </header>
+{% endif %}
+
 {{content}}
