--- a/_includes/css/grid.css
+++ b/_includes/css/grid.css
@@ -28,6 +28,12 @@
   align-items: center;
 }
 
+.grid-h-center {
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
+
 .grid-stretch {
   -webkit-align-items: stretch;
   -ms-align-items: stretch;
