--- a/_includes/hero-news.html
+++ b/_includes/hero-news.html
@@ -1,9 +1,9 @@
-<header class="hero hero-news {{page.heroImage}}">
+<header class="hero hero-news {{page.heroImage}} push-2">
   <div class="wrapper gutter">
     <h1>{{page.title}}</h1>
-    {% if page.byline %}
+    <!-- {% if page.bylineLoc == header %}
       <p class="giga text-fff">{{page.byline}}</p>
-      {% endif %}
+      {% endif %} -->
     {% if page.heroBtn %}
       <a id="content-start" class="btn giga" href="{{site.baseurl}}/{{page.heroBtnLink}}">{{page.heroBtnText}}</a>
     {% endif %}
