--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,10 @@
     <li class="{{include.liClass}}">
       <ul class="{{include.ulInner}}">
         <li class="{{include.liInner}}">
-          <a class="{{include.aInner}} {% if page.url contains 'about' %}current{% endif %}" href="{{site.baseurl}}/about/">About</a>
+          <a class="{{include.aInner}} {% if page.url contains 'about' %}current{% endif %} subnav-label" href="{{site.baseurl}}/about/">About</a>
+          <div class="subnav">
+            {% include about-subnav.html olClass='push-0 list-group milli' %}
+          </div>
         </li>
         <li class="{{include.liInner}}">
           <a class="{{include.aInner}} {% if page.url contains 'volunteer' %}current{% endif %}" href="{{site.baseurl}}/volunteer/">Volunteer</a>
