--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -13,5 +13,12 @@ layout: main
     </div>
   </header>
 {% endif %}
-
-{{content}}
+<div class="pad-b-2">
+  <div class="max-length gutter">
+    <h2 class="text-center">{{page.byline}}</h2>
+    {{content}}
+  </div>
+</div>
+<section id="news-preview" class="news-preview pad-t-b-2 bg-lg" tabindex="0">
+  {% include news-events-prev.html %}
+</section>
