Fix spelling mistake and add sticky to categories

--- a/_includes/about-subnav.html
+++ b/_includes/about-subnav.html
@@ -6,7 +6,7 @@
     <a class="{{include.aClass}}" href="{{site.baseurl}}/about/#our-services">Our Services</a>
   </li>
   <li>
-    <a class="{{include.aClass}}" href="{{site.baseurl}}/about/#what-we-give">What We Gives</a>
+    <a class="{{include.aClass}}" href="{{site.baseurl}}/about/#what-we-give">What We Give</a>
   </li>
   <li>
     <a class="{{include.aClass}}" href="{{site.baseurl}}/about/#board-of-directors">Board of Directors</a>
