--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -31,7 +31,19 @@
 
 html {
   font-family: var(--font-primary);
+  /* overflow: hidden; */
 }
+/*
+body {
+  transition: margin .4s;
+  /* overflow-x: hidden; */
+  /* overflow-y: scroll;
+} */
+
+/* body.sticky {
+  margin-top: 3.590625rem;
+  height: calc(100vh - 3.590625rem);
+} */
 
 h1, h2, h3, h4, h5, h6, .font-alt {
   font-family: var(--font-secondary);
@@ -143,6 +155,10 @@ input.dollar-input {
   transition: background-color var(--transition-primary);
 }
 
+.text-primary {
+  color: var(--color-primary);
+}
+
 .text-secondary {
   color: var(--color-secondary);
 }
@@ -155,11 +171,23 @@ input.dollar-input {
   display: flex;
   align-items: center;
   text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url("{{site.baseurl}}/images/hero-home.jpg") center / cover no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: #fff;
   box-shadow: var(--shadow-primary);
   position: relative;
   z-index: 1;
+}
+
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .7);
+  z-index: -1;
 }
 
 .hero-news {
@@ -207,6 +235,16 @@ input.dollar-input {
 
 @media only screen and (min-width: 38em) {
 
+  /* body.sticky {
+    margin-top: 4.1619318182rem;
+    height: calc(100vh - 4.1619318182rem);
+  }
+
+  body.sticky.sticky-extend {
+    margin-top: 7.6243181818rem;
+    height: calc(100vh - 7.6243181818rem);
+  } */
+
   /* ---------- Main > Header ---------- */
 
   .header-basic {
@@ -220,6 +258,16 @@ input.dollar-input {
 }
 
 @media only screen and (min-width: 60em) {
+
+  /* body.sticky {
+    margin-top: 4.375rem;
+    height: calc(100vh - 4.375rem);
+  }
+
+  body.sticky.extended {
+    margin-top: 8.1rem;
+    height: calc(100vh - 8.1rem);
+  } */
 
   /* ---------- Main > Header ---------- */
 
