--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -5,6 +5,8 @@
     background-color var(--transition-primary),
     box-shadow var(--transition-primary);
   z-index: 1000000;
+  top: 0;
+  left: 0;
 }
 
 .masthead.sticky {
