--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/xqk1pkz.css">
-  <!-- <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/> -->
+  <link rel="shortcut icon" href="{{site.baseurl}}/favicon.ico"/>
 </head>
 <body class="{{page.pageClass}}">
   <ul class="skip-links">
