Add services content

--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -49,6 +49,10 @@ h1, h2, h3, h4, h5, h6, .font-alt {
   font-family: var(--font-secondary);
 }
 
+h1 {
+  color: var(--color-primary);
+}
+
 a {
   color: var(--color-primary);
   text-decoration: none;
