--- a/_includes/sponsor-bar.html
+++ b/_includes/sponsor-bar.html
@@ -5,7 +5,7 @@
     {% for sponsor in site.data.sponsor-list %}
     <div class="unit [ xs-1-2 m-1-3 ] island-1-2 unit-content-distribute">
       <div class="logo-wrap gutter push content-fill unit-content-center-vertical">
-        <img class="img-flex" src="{{site.baserul}}/images/sponsors/{{sponsor.logo}}" alt="{{sponsor-logoAlt}}">
+        <img class="img-flex" src="{{site.baseurl}}/images/sponsors/{{sponsor.logo}}" alt="{{sponsor-logoAlt}}">
       </div>
       <strong class="block {{include.sponsorClass}}">{{sponsor.title}}</strong>
     </div>
