Fix notation in site data

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -3,8 +3,8 @@
     <strong class="{{include.titleSize}} font-alt">The Hub & Rebound</strong>
   </li>
   <li class="{{include.liClass}}">
-    <a class="{{include.aClass}}" href="tel:6132565225">
-      <span class="icon-label push-r-1-2">(613) 256-5225 or (613) 256-1700</span>
+    <a class="{{include.aClass}}" href="tel:{{site.data.site.tel}}">
+      <span class="icon-label push-r-1-2">{{site.data.site.telDisplay}}</span>
       <i class="icon i-3-4">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#phone" /></svg>
       </i>
