Update to send to Paddy

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<header class="hero {{include.heroSize}}" style="background-image: url('{{site.baseurl}}/images/{{pages.heroBG}}')">
+<header class="hero {{include.heroSize}}" style="background-image: url('{{site.baseurl}}{{site.data.pages.home.banner.heroImg}}')">
   <div class="hero-overlay"></div>
   <div class="wrapper gutter">
     <h1>{{pages.h1Text}}</h1>
