Add target to icon-list links

--- a/_includes/social-media-list.html
+++ b/_includes/social-media-list.html
@@ -4,7 +4,7 @@
   </li>
   {% for mediaIcons in site.data.social-media %}
     <li class="push-r">
-      <a class="inline-block" href="{{mediaIcons.link}}">
+      <a class="inline-block" href="{{mediaIcons.link}}" target="_blank">
         <i class="icon i-1">
           <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#{{mediaIcons.iconRef}}" /></svg>
         </i>
