--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,10 +1,10 @@
-<header class="hero {{include.heroSize}}" style="background-image: url('{{site.baseurl}}{{site.data.pages.home.banner.heroImg}}')">
+<header class="hero" style="background-image: url('{{site.baseurl}}{{include.heroImg}}')">
   <div class="hero-overlay"></div>
   <div class="wrapper gutter">
-    <h1>{{pages.h1Text}}</h1>
-    <p class="giga text-fff">{{pages.bylineText}}</p>
-    {% if pages.heroBtn == true %}
-      <a id="content-start" class="btn giga {{pages.heroBtnClass}}" href="{{site.baseurl}}/{{pages.heroBtnLink}}">{{pages.heroBtnText}}</a>
+    <h1>{{include.h1Text}}</h1>
+    <p class="giga text-fff">{{include.bylineText}}</p>
+    {% if include.heroBtn == true %}
+      <a id="content-start" class="btn giga {{include.heroBtnClass}}" href="{{site.baseurl}}/{{include.heroBtnLink}}">{{include.heroBtnText}}</a>
     {% endif %}
   </div>
 </header>
